# page-analyzer

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: build.yml
page_analyzer/: __init__.py  app.py  db.py  utils.py
page_analyzer/templates/: 404.html  500.html  base.html  flash.html  index.html  show.html  urls.html
